--- a/src/gbfs.Client/gbfs.Client.fsproj
+++ b/src/gbfs.Client/gbfs.Client.fsproj
@@ -5,12 +5,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Main.fs" />
-    <Compile Include="Startup.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Bolero" Version="0.*" />
     <PackageReference Include="Bolero.Build" Version="0.*" />
     <PackageReference Include="Bolero.HotReload" Version="0.*" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.*" />
+    <PackageReference Include="Fable.Core" Version="4.*" />
+    <PackageReference Include="Fable.Browser.Dom" Version="2.*" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\gbfs.Lib\gbfs.Lib.fsproj" />
   </ItemGroup>
 </Project>
