--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,8 @@
+export GIT_AUTHOR_NAME="Makoto Ito"
+export GIT_AUTHOR_EMAIL="m4k070@pm.me"
+export GIT_COMMITTER_NAME="Makoto Ito"
+export GIT_COMMITTER_EMAIL="m4k070@pm.me"
+
+gh auth switch -u m4k070 2>/dev/null || true
+
 use flake
