--- a/src/gbfs.Lib/gbfs.Lib.fsproj
+++ b/src/gbfs.Lib/gbfs.Lib.fsproj
@@ -8,9 +8,13 @@
   <ItemGroup>
     <Compile Include="Memory.fs" />
     <Compile Include="Ppu.fs" />
+    <Compile Include="Apu.fs" />
+    <Compile Include="Joypad.fs" />
+    <Compile Include="Timer.fs" />
     <Compile Include="Cpu.fs" />
     <Compile Include="CBPrefix.fs" />
     <Compile Include="Decoder.fs" />
+    <Compile Include="Emulator.fs" />
   </ItemGroup>
 
 </Project>
